fix(accessibility): correct color contrast

--- a/src/app/pages/landing/about/about-hero/about-hero.component.scss
+++ b/src/app/pages/landing/about/about-hero/about-hero.component.scss
@@ -41,7 +41,7 @@ h1 {
 p {
   font-size: 1.25em;
   line-height: 1.5em;
-  color: var(--ion-color-medium);
+  color: var(--ion-color-dark);
 }
 
 img {
